2012-06-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/player_intercept.cpp:
	- 他のプレイヤに与えるボーナスステップの方針を元に戻した

	* rcsc/player/world_model.cpp:
	- 味方がキック可能な場合にボール速度0にするルールを無効化

	* rcsc/player/ball_object.cpp:
	- コミュニケーションによる情報更新のしきい値を修正．自分が見た情報
	を優先する
	- 優先するのは位置情報のみとする

2012-06-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/abstract_player_object.cpp:
	* rcsc/player/abstract_player_object.h:
	* rcsc/player/body_sensor.h:
	* rcsc/player/player_object.cpp:
	* rcsc/player/player_object.h:
	* rcsc/player/self_object.cpp:
	* rcsc/player/self_object.h:
	- M_pointto_angleとM_pointto_countをAbstractPlayerObjectへ移動
	- SelfObject::armExpires()を追加

2012-06-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- 最後のキッカーが味方だった場合に次の更新で不具合が起きることがあっ
	たので修正．味方プレイヤがキッカブルの場合に速度0とするように変更
	したことの影響

	* rcsc/action/basic_actions.cpp:
	- Neck_TurnToBallを修正．敵のボール捕捉サイクル数が1以下の場合はボー
	ル方向へ確実に首を向けるルールを追加

	* rcsc/player/self_intercept_v13.cpp:
	- 全方位インターセプトを修正．成功判定条件が誤っていた

2012-06-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_go_to_point.cpp:
	- ゴールポストとの衝突回避アルゴリズムのバグを修正

	* rcsc/player/player_intercept.cpp:
	- 他のプレイヤへのボーナスステップを修正．ceil(信頼性カウント*0.5)に変更

2012-06-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/player_intercept.cpp:
	- 敵味方共にボーナスステップを信頼性カウント-1に変更

2012-06-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_go_to_point.cpp:
	- デバッグメッセージ修正

2012-06-09  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/ball_object.cpp:
	* rcsc/player/ball_object.h:
	* rcsc/player/world_model.cpp:
	- 味方がボールキック可能と推定された場合もボール速度を0にするルールを追加

2012-06-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	- バージョン文字列をrc12へ更新

	* rcsc/player/world_model.cpp:
	- lastKickerUnum()を追加．精度は保証されない．自分自身がキックした
	場合のみ，確実に記録される

2012-06-06  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- 相対位置の差分による速度更新に失敗した場合に，絶対位置の差分によ
	る速度更新を行う機能を追加
